--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,6 +12,8 @@ find_package(Cellworld_tools REQUIRED)
 set (cellworld_sim_files
         src/cell_world_sim/static_data.cpp
         src/cell_world_sim/simulation.cpp
+        src/cell_world_sim/generative_model.cpp
+        src/cell_world_sim/belief_state.cpp
         src/cell_world_sim/agents/prey.cpp
         src/cell_world_sim/agents/prey_predictor.cpp
         src/cell_world_sim/agents/predator.cpp
